# vocab-tg

./: .gitignore  docker-compose.yml  render.yaml
.claude/: settings.json
api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: bb08c7dd5d4a_add_topics_to_words.py  c3a1f5e89d12_add_last_push_sent_date.py  fe8f26727bce_initial_schema.py
api/app/: config.py  database.py  dependencies.py  main.py
api/app/api/v1/: __init__.py  daily.py  notifications.py  reviews.py  stats.py  telegram.py  users.py  words.py
api/app/models/: __init__.py  base.py  daily_session.py  review_log.py  user.py  user_word.py  word.py  word_pool.py
api/app/repositories/: base.py  daily_session_repo.py  review_log_repo.py  user_repo.py  user_word_repo.py  word_pool_repo.py  word_repo.py
api/app/schemas/: daily.py  review.py  stats.py  user.py  word.py
api/app/services/: daily_service.py  datamuse_service.py  dictionary_service.py  notification_service.py  review_generators.py  review_service.py  review_type_selector.py  stats_service.py  telegram_bot_service.py  translation_service.py  user_service.py  word_service.py
api/app/utils/: difficulty.py  fsrs_helper.py
api/data/: wiktionary_classified.jsonl
api/scripts/: classify_words.py  cleanup_word_pool.py  seed_word_pool.py
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.vue  main.ts  style.css
bot/: .env.example  pyproject.toml  requirements.txt
bot/app/: api_client.py  config.py  main.py  (+1 more)
nginx/: Dockerfile  nginx.conf
(+51 files in other folders)
